# CircuitPython_MorseCode

./: README.rst  morsecode.py  pyproject.toml  setup.py  setup.py.disabled
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: morsecode_simpletest.py
